Fix: close an unwanted gap between the tabed-menu and the associated content table

--- a/style.css
+++ b/style.css
@@ -756,7 +756,7 @@ font-weight: bold;
 ul.menulist {
 list-style-type: none;
 margin: 1em 0 0 0;
-padding: 0 0 4px 0;
+padding: 0 0 2px 0;
 white-space: nowrap;
 }
 ul.menulist li {
